# kradra-backend

./: .env.example  .gitignore  Cargo.toml  ONBOARDING.md  docker-compose.yml
kradra-api/: Cargo.toml
kradra-api/src/: error.rs  lib.rs  main.rs  state.rs
kradra-api/src/crypto/: mod.rs  passwords.rs  passwords_test.rs  tokens.rs
kradra-api/src/http/: mod.rs  router.rs
kradra-api/src/http/cookies/: csrf.rs  mod.rs  refresh.rs
kradra-api/src/http/extractors/: auth_user.rs
kradra-api/src/http/middleware/: rate_limit.rs  request_id.rs
kradra-api/src/infra/: mod.rs
kradra-api/src/infra/crypto/: mod.rs  passwords.rs  passwords_test.rs  tokens.rs
kradra-api/src/infra/db/: app_settings_store.rs  mod.rs  refresh_token_store.rs  user_repo.rs
kradra-api/src/infra/security/: lockout.rs  mod.rs  slowdown.rs
kradra-api/src/infra/telemetry/: audit.rs  logging.rs
kradra-api/src/modules/: mod.rs  router.rs
kradra-api/src/modules/admin/: dto.rs  handlers.rs  mod.rs  routes.rs
kradra-api/src/modules/auth/: dto.rs  handlers.rs  mod.rs  routes.rs
kradra-api/src/modules/system/: handlers.rs  mod.rs  routes.rs
kradra-api/src/modules/users/: dto.rs  handlers.rs  routes.rs
kradra-api/tests/: admin_flow.rs  auth_flow.rs  auth_test_helpers.rs  test_app.rs
kradra-core/: Cargo.toml
kradra-core/src/: lib.rs
kradra-core/src/auth/: errors.rs  mod.rs  ports.rs  types.rs  usecases.rs
kradra-core/src/auth/models/: mod.rs  token.rs  user.rs
migrations/: 20260305184428_init_auth.down.sql  20260305184428_init_auth.up.sql  20260310181515_auth_lockout_fields.down.sql  20260310181515_auth_lockout_fields.up.sql  20260314135927_refresh_token_indexes.down.sql  20260314135927_refresh_token_indexes.up.sql  20260320130447_create_app_settings.down.sql  20260320130447_create_app_settings.up.sql
