[workspace]
resolver = "2"
members = [
  "kradra-core",
  "kradra-api",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
# anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
dotenvy = "0.15"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "macros"] }



