[workspace]
resolver = "2"
members = [
  "kradra-core",
  "kradra-api",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
# anyhow = "1"

tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

dotenvy = "0.15"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "macros", "time"] }

argon2 = "0.5"
password-hash = "0.5"
rand_core = { version = "0.6.4", features = ["getrandom"] }

jsonwebtoken = { version = "10.3.0", default-features = false, features = ["rust_crypto"] }
sha2 = "0.10.9"
base64 = "0.22.1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }






