[package]
name = "kradra-api"
default-run = "kradra-api"
version = "0.1.0"
edition = "2024"

[dependencies]
tower-http = { version = "0.6", features = ["cors"] }

# anyhow.workspace = true

tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true

dotenvy.workspace = true

sqlx.workspace = true

argon2.workspace = true
password-hash.workspace = true
rand_core.workspace = true

jsonwebtoken.workspace = true
sha2.workspace = true
base64.workspace = true

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

kradra-core = { path = "../kradra-core" }